404 pages localied and jq flickr random restored

--- a/public/404.html
+++ b/public/404.html
@@ -165,8 +165,8 @@
           </div>
           <div id='content'>
             <div id='inner' class=" ">
-              <h2>Pagina non trovata</h2>
-              <p><a href="/">Torna alla home</a></p>
+              <h2>Pagina non trovata | Page not found</h2>
+              <p><a href="/">Torna alla home | Return to home page</a></p>
             </div>
             <div class='clear'></div>
           </div>
