updated gemfile fixed work not found

--- a/public/500.html
+++ b/public/500.html
@@ -20,7 +20,7 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>Accademia Cappiello</h1>
-    <p>Ooops... Si e' verificato un errore nel creare. Abbiamo ricevuto una notifica e risolveremo al piu' presto. A presto!</p>
+    <p>Ooops... Si e' verificato un errore in questa pagina. Abbiamo ricevuto una notifica e risolveremo al piu' presto. Nel frattempo puoi tornare alla <a href="/">home page</a>. A presto!</p>
   </div>
 </body>
 </html>
