renamed forms to info, added news page, image_left textile

--- a/public/404.html
+++ b/public/404.html
@@ -147,7 +147,7 @@
                 <a href="/pages/borse_di_studio">Borse di Studio</a>
               </li>
               <li>
-                <a href="/pages/form">Form</a>
+                <a href="/pages/form">Info</a>
               </li>
               <li>
                 <a href="/pages/contatti">Contatti</a>
