registrati manda a registrazione con preferenze

--- a/public/404.html
+++ b/public/404.html
@@ -67,7 +67,7 @@
           |
           <a href="/login">Login</a>
           |
-          <a href="/users/new">Registrati</a>
+          <a href="/pages/info">Registrati</a>
         </div>
         <div class='clear'></div>
         <div id='header'>
