--- a/public/404.html
+++ b/public/404.html
@@ -70,84 +70,101 @@
           <a href="/pages/info">Registrati</a>
         </div>
         <div class='clear'></div>
-        <div id='header'>
+        <div id="header">
           <h1>
-            Accademia d'Arte e Design Leonetto Cappiello  - Firenze
+             Accademia d'Arte e Design Leonetto Cappiello Firenze
           </h1>
-          <a href='/'>
-            <img alt="Logo" id="logo" src="/images/logo.png?1301052587" />
+          <a href="/">
+            <img alt="Logo" id="logo" src="/images/logo.png?1348615138">
           </a>
-          <div id='banner'>
-            <img alt="6" src="/images/banner/main/6.png?1301052587" />
-            <img alt="5" src="/images/banner/main/5.png?1301052587" />
-            <img alt="3" src="/images/banner/main/3.jpg?1301052587" />
-            <img alt="1" src="/images/banner/main/1.png?1301052587" />
-            <img alt="9" src="/images/banner/main/9.png?1301052587" />
-            <img alt="4" src="/images/banner/main/4.jpg?1301052587" />
-            <img alt="7" src="/images/banner/main/7.png?1301052587" />
+          <div id="banner" style="position: relative; ">
+            <img alt="1" class="first" src="/images/banner/main/1.png?1348615138" style="position: absolute; top: 0px; left: 0px; display: none; z-index: 7; opacity: 0; ">
+            <img alt="6" src="/images/banner/main/6.png?1348615138" style="position: absolute; top: 0px; left: 0px; z-index: 6; opacity: 0; display: none; ">
+            <img alt="2" src="/images/banner/main/2.png?1348615138" style="position: absolute; top: 0px; left: 0px; z-index: 5; opacity: 0; display: none; ">
+            <img alt="8" src="/images/banner/main/8.jpg?1348615138" style="position: absolute; top: 0px; left: 0px; z-index: 4; opacity: 1; display: inline; ">
+            <img alt="7" src="/images/banner/main/7.png?1348615138" style="position: absolute; top: 0px; left: 0px; display: none; z-index: 3; opacity: 0; ">
+            <img alt="10" src="/images/banner/main/10.png?1348615138" style="position: absolute; top: 0px; left: 0px; display: none; z-index: 2; opacity: 0; ">
+            <img alt="4" src="/images/banner/main/4.jpg?1348615138" style="position: absolute; top: 0px; left: 0px; display: none; z-index: 1; opacity: 0; ">
           </div>
-          <div class='clear'></div>
+          <div class="clear"></div>
         </div>
         <div id='sub_container'>
           <div id='nav_cont'>
-            <ul id='nav'>
+            <ul id="nav">
+              <li>
+                <a href="/pages/news">News</a>
+              </li>
               <li>
                 <a href="/pages/l_accademia">L'Accademia</a>
               </li>
               <li>
-                <ul class='subnav'>
+                <ul class="subnav">
                   <li><a href="/pages/visual_design_corsi_annuali">Visual Design</a></li>
                   <li><a href="/pages/interior_design_corsi_annuali">Interior Design</a></li>
                 </ul>
                 <a href="javascript:void(0)">Corsi Annuali</a>
               </li>
               <li>
-                <ul class='subnav'>
-                  <li><a href="/pages/visual_design_corsi_brevi">Visual Design</a></li>
-                  <li><a href="/pages/interior_design_corsi_brevi">Interior Design</a></li>
-                  <li><a href="/pages/grafica_editoriale">Grafica Editoriale</a></li>
-                  <li>
-                    <ul class='subnav sub2'>
-                      <li><a href="/pages/autocad_2d_base">Base</a></li>
-                      <li><a href="/pages/autocad_2d_intermedio">Intermedio</a></li>
-                      <li><a href="/pages/autocad_2d_pro">Pro</a></li>
-                    </ul>
-                    <a href="javascript:void(0)">Autocad 2d</a>
-                  </li>
-                  <li>
-                    <ul class='subnav sub2'>
-                      <li><a href="/pages/3d_studio_max_base">Base</a></li>
-                      <li><a href="/pages/3d_studio_max_avanzato">Avanzato</a></li>
-                    </ul>
-                    <a href="javascript:void(0)">3d Studio Max</a>
-                  </li>
-                  <li><a href="/pages/vray">V-Ray</a></li>
-                  <li>
-                    <ul class='subnav sub2'>
-                      <li><a href="/pages/autocad_3d_1">Base</a></li>
-                      <li><a href="/pages/autocad_3d_2">Avanzato</a></li>
-                    </ul>
-                    <a href="javascript:void(0)">Autocad 3D</a>
-                  </li>
-                  <li>
-                    <ul class='subnav sub2'>
-                      <li><a href="/pages/sketchup_base">Base</a></li>
-                      <li><a href="/pages/sketchup_avanzato">Avanzato</a></li>
-                    </ul>
-                    <a href="javascript:void(0)">SketchUp</a>
-                  </li>
-                  <li><a href="/pages/corsi_speciali">Corsi Speciali</a></li>
+                <ul class="subnav">
+                  <li><a href="/pages/visual_design_corso_master">Visual Design</a></li>
+                  <li><a href="/pages/interior_design_corso_master">Interior Design</a></li>
                 </ul>
-                <a href="javascript:void(0)">Corsi Brevi</a>
+                <a href="javascript:void(0)">Corsi Master</a>
               </li>
               <li>
-                <a href="/pages/stage_gratuiti">Stage Gratuiti</a>
+                <ul class="subnav">
+                  <li>
+                    <ul class="subnav sub2">
+                      <li><a href="/pages/grafica_editoriale">Grafica Editoriale</a></li>
+                      <li><a href="/pages/illustrazione_visual_design">Illustrazione</a></li>
+                      <li><a href="/pages/photoshop_visual_design">Photoshop</a></li>
+                      <li><a href="/pages/web_design_visual_design">Web Design</a></li>
+                    </ul>
+                    <a href="javascript:void(0)">Visual Design</a>
+                  </li>
+                  <li>
+                    <ul class="subnav sub2">
+                      <li><a href="/pages/interior_design_modellazione_3d">Modellazione 3D</a></li>
+                      <li><a href="/pages/rendering_interior_design">Rendering</a></li>
+                      <li><a href="/pages/sketch_up_interior_design">Sketch-Up</a></li>
+                      <li><a href="/pages/autocad_interior_design">Autocad</a></li>
+                      <li><a href="/pages/3d_studio_max_interior_design">3D Studio Max</a></li>
+                      <li><a href="/pages/v-ray">V-Ray</a></li>
+                    </ul>
+                    <a href="javascript:void(0)">Interior Design</a>
+                  </li>
+                </ul>
+                <a href="javascript:void(0)">Corsi specialistici</a>
+              </li>
+              <li>
+                <ul class="subnav">
+                  <li>
+                    <a href="/pages/laboratorio_visual_design">Visual Design</a>
+                  </li>
+                  <li>
+                    <a href="/pages/laboratorio_interior_design">Interior Design</a>
+                  </li>
+                </ul>
+                <a href="javascript:void(0)">Laboratori</a>
+              </li>
+              <li>
+                <ul class="subnav">
+                  <li><a href="/pages/visual_design_corsi_brevi">Visual Design</a></li>
+                  <li><a href="/pages/interior_design_corsi_brevi">Interior Design</a></li>
+                </ul>
+                <a href="javascript:void(0)">Corsi brevi</a>
+              </li>
+              <li>
+                <a href="/pages/open_days">Open day</a>
               </li>
               <li>
                 <a href="/pages/borse_di_studio">Borse di Studio</a>
               </li>
               <li>
-                <a href="/pages/form">Info</a>
+                <a href="/pages/info">Info</a>
+              </li>
+              <li>
+                <a href="/pages/incontro-tutor">Incontro Tutor</a>
               </li>
               <li>
                 <a href="/pages/contatti">Contatti</a>
