visual design to grafica pubblicitaria

--- a/public/404.html
+++ b/public/404.html
@@ -241,7 +241,7 @@
                 <div class="inevidenza-box">
                 			<h3 class="inevidenza-title" style="white-space: nowrap; overflow: hidden;"><a href="/pages/grafica_pubblicitaria_corsi_annuali">Annuale Grafica Pubblicitaria</a></h3>
                 <div class="inevidenza-image">
-                <p><a href="/pages/grafica_pubblicitaria_corsi_annuali"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-frame.jpg" alt="Corso Annuale Visual Design"></a></p>
+                <p><a href="/pages/grafica_pubblicitaria_corsi_annuali"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-frame.jpg" alt="Corso Annuale Video editing"></a></p>
                 </div>
                 </div>
                 <div class="inevidenza-box">
@@ -265,7 +265,7 @@
                 <div class="inevidenza-box-small">
                 		<h3 class="inevidenza-title"><a href="/pages/visual_design_corso_master">Master Visual</a></h3>
                 <div class="inevidenza-image">
-                <p><a href="/pages/visual_design_corso_master"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-master-frame.jpg" alt="Master Visual Design"></a></p>
+                <p><a href="/pages/visual_design_corso_master"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-master-frame.jpg" alt="Master Graphic Design"></a></p>
                 </div>
                 </div>
                 <div class="inevidenza-box-small">
@@ -511,7 +511,7 @@
                 <div class="inevidenza-box">
                 			<h3 class="inevidenza-title" style="white-space: nowrap; overflow: hidden;"><a href="/pages/grafica_pubblicitaria_corsi_annuali">Annuale Grafica Pubblicitaria</a></h3>
                 <div class="inevidenza-image">
-                <p><a href="/pages/grafica_pubblicitaria_corsi_annuali"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-frame.jpg" alt="Corso Annuale Visual Design"></a></p>
+                <p><a href="/pages/grafica_pubblicitaria_corsi_annuali"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-frame.jpg" alt="Corso Annuale Grafica Pubblicitaria"></a></p>
                 </div>
                 </div>
                 <div class="inevidenza-box">
@@ -535,7 +535,7 @@
                 <div class="inevidenza-box-small">
                 		<h3 class="inevidenza-title"><a href="/pages/visual_design_corso_master">Master Visual</a></h3>
                 <div class="inevidenza-image">
-                <p><a href="/pages/visual_design_corso_master"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-master-frame.jpg" alt="Master Visual Design"></a></p>
+                <p><a href="/pages/visual_design_corso_master"><img class="inevidenza" src="http://accademia-cappiello.it/uploads/visual-master-frame.jpg" alt="Master Graphic Design"></a></p>
                 </div>
                 </div>
                 <div class="inevidenza-box-small">
