--- a/new_site/home.html
+++ b/new_site/home.html
@@ -42,7 +42,7 @@
         <div class="desktop">
         <div class="separator5"></div>
         <small>
-          <ul class="line">
+          <ul class="line right-content">
             <li class="col col6 right-content">
               <a href="#" class="color-primary toggle-opacity-inverse-hover">
                 AREA UTENTI
@@ -82,7 +82,8 @@
       </div>
       <div class="col col8 center-content desktop">
         <div class="header-menu desktop">
-          <div class="separator100"></div>
+          <div class="separator50"></div>
+            <div class="separator30"></div>
           <a href="#" class="active">Accademia</a>
           <a href="#">Corsi</a>
           <a href="#">News</a>
@@ -96,25 +97,27 @@
     <div class="separator15"></div>
   </div>
   <!--end header and menu-->
+  <!--slider-->
+  <div class="line bg-muted-inverse">
+    <div class="separator30"></div>
+    <div class="line-compress line-max">
+  <img src="http://accademia-cappiello.it/images/banner/main/pittura_creativa.png?1445262499" width="100%"/>
+</div>
+</div>
+<!--end slider-->
   <!--content-->
   <div class="line bg-white">
     <div class="line-compress line-max">
-      <img src="http://accademia-cappiello.it/images/banner/main/pittura_creativa.png?1445262499" width="100%"/>
       <div class="separator30"></div>
-      <h1 class="line">L'Accademia</h1>
+      <h1 class="line center-content-tablet">L'Accademia</h1>
       <div class="separator10"></div>
       <div class="separator15 pattern"></div>
       <div class="separator30"></div>
-      <div class="line">
-        <div class="col4 line-tablet center-content">
-          <img src="http://farm9.static.flickr.com/8126/8657296175_fbc6f3a697_b.jpg" width="100%"/>
-        </div>
-        <div class="col6 line-tablet">
-          <div class="line-compress line-full-tablet">
+      <div class="line article">
+          <img src="http://farm9.static.flickr.com/8126/8657296175_fbc6f3a697_b.jpg"/>
+
             Dal 1956 l’Accademia d’Arte e design Leonetto Cappiello è il luogo ideale per esprimere la propria creatività e per tradurla in una reale opportunità di lavoro. Qui si insegna a dare forma, la migliore possibile, alle idee, perchè ogni professione, anche la più creativa, non si può improvvisare. Ha bisogno di basi, di nozioni, di tecniche.
-            L’Accademia, intitolata al grande cartellonista livornese Leonetto Cappiello attivo a Parigi ai primi del ‘900, è stata una delle prime Accademie, se non la prima in italia, ad ottenere il riconoscimento del Ministero della Pubblica istruzione tramite il Consorzio Provinciale per l’istruzione Tecnica di Firenze con provvedimento n. 1368 del 28 Agosto 1956.
-          </div>
-        </div>
+            L’Accademia, intitolata al grande cartellonista livornese Leonetto Cappiello attivo a Parigi ai primi del ‘900, è stata una delle prime Accademie, se non la prima in italia, ad ottenere il riconoscimento del Ministero della Pubblica istruzione tramite il Consorzio Provinciale per l’istruzione Tecnica di Firenze con provvedimento n. 1368 del 28 Agosto 1956
       </div>
     </div>
 
