fixing mobile menu

--- a/new_site/home.html
+++ b/new_site/home.html
@@ -33,6 +33,18 @@
             <div class="separator15"></div>
             <a class="btn btn-smal color-white bg-primary">Area utenti</a>
           </div>
+          <div class="separator15"></div>
+          <a href="#" class="color-muted">
+            <i class="fa fa-phone "></i>
+            Telefono
+          </a>
+          &nbsp;
+          &nbsp;
+          &nbsp;
+          <a href="#" class="color-muted">
+            <i class="fa fa-envelope-o"></i>
+            Email
+          </a>
           <div class="separator50"></div>
           <div class="separator30"></div>
       </div>
