--- a/new_site/home.html
+++ b/new_site/home.html
@@ -140,8 +140,8 @@
         </div>
       </div>
       <!--end slider-->
-      <!--content-->
-      <!--HOME-->
+      <!----------------content-->
+      <!--ACCADEMIA-->
       <div class="line bg-white">
         <div class="line-compress line-max">
           <div class="separator30"></div>
@@ -159,7 +159,7 @@
 
         <div class="separator50"></div>
       </div>
-      <!--end HOME-->
+      <!--end ACCADEMIA-->
       <!--CORSI-->
       <div class="line bg-muted-inverse">
         <div class="line-compress line-max">
@@ -222,7 +222,50 @@
         <div class="separator50"></div>
       </div>
       <!--end CORSI-->
-      <!--end content-->
+      <!----------------end content-->
+      <!--GALLERY-->
+      <div class="line bg-white">
+        <div class="line-compress line-max">
+          <div class="separator30"></div>
+          <h1 class="line center-content-tablet">La Gallery</h1>
+          <div class="separator10"></div>
+          <div class="separator15 pattern"></div>
+          <div class="separator30"></div>
+          <div class="line center-content">
+            <div class="col5 line-tablet">
+            <a class="bg-white no-radius col5 color-black toggle-opacity-inverse-hover">
+              <div class="separator3"></div>
+              Grafica Pubblicitaria
+              <div class="separator3"></div>
+            </a>
+              <a class="bg-primary-2 color-white no-radius col5 toggle-opacity-inverse-hover">
+                <div class="separator3"></div>
+                Interior Design
+                  <div class="separator3"></div>
+              </a>
+            </div>
+            <div class="separator10 tablet mobile"></div>
+            <div class="col5 line-tablet">
+                <a class="bg-primary-3 color-white no-radius col5 toggle-opacity-inverse-hover">
+                  <div class="separator3"></div>
+                  Digital Communication
+                  <div class="separator3"></div>
+                </a>
+                  <a class="bg-primary-4 color-white no-radius col5 toggle-opacity-inverse-hover">
+                    <div class="separator3"></div>
+                    Eventi
+                    <div class="separator3"></div>
+                  </a>
+                </div>
+          </div>
+          <div class="separator30"></div>
+          <div class="line article"> qui la gallery</div>
+        </div>
+
+        <div class="separator50"></div>
+      </div>
+
+      <!--GALLERY-->
       <!--footer-->
       <footer class="footer line-compress line-max center-content-tablet">
         <div class="separator30"></div>
