styling mobile menu first try

--- a/new_site/home.html
+++ b/new_site/home.html
@@ -6,42 +6,43 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <link href="stylesheets/vendor/csshelper/csshelper.css" rel="stylesheet">
   <link href="stylesheets/vendor/font-awesome/font-awesome.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body class="bg-black">
   <!--mobile menu-->
-  <a id="btnMenu" onClick="$(this).toggleClass('rotate'); $('#menuMobile').toggleClass('hide');" href="javascript:void(0)" class="absolute top right color-white bg-primary mobile tablet center-content layer4">
+  <a id="btnMenu" onClick="$(this).toggleClass('rotate bg-primary'); $('#menuMobile').toggleClass('hide');" href="javascript:void(0)" class="absolute top right color-white mobile tablet center-content layer4">
     <i class="fa fa-bars"></i>
     <a>
       <div id="menuMobile" class="overlay over-y-scroll color-white center-content hide layer2">
           <div class="separator50"></div>
           <div class="separator30"></div>
           <div class="col6 offset-left2 radius3">
-            <a class="btn btn-small bg-muted color-muted">Accademia</a>
+            <a class="btn btn-small bg-muted color-white">Accademia</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">Corsi</a>
+            <a class="btn btn-small bg-muted color-white">Corsi</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">News</a>
+            <a class="btn btn-small bg-muted color-white">News</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">Calendario</a>
+            <a class="btn btn-small bg-muted color-white">Calendario</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">Borse di Studio</a>
+            <a class="btn btn-small bg-muted color-white">Borse di Studio</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">Open Day</a>
+            <a class="btn btn-small bg-muted color-white">Open Day</a>
             <div class="separator10"></div>
-            <a class="btn btn-small bg-muted color-muted">Contatti</a>
+            <a class="btn btn-small bg-muted color-white">Contatti</a>
             <div class="separator15"></div>
             <a class="btn btn-smal color-white bg-primary">Area utenti</a>
           </div>
           <div class="separator15"></div>
-          <a href="#" class="color-muted">
+          <a href="#" class="color-white">
             <i class="fa fa-phone "></i>
             Telefono
           </a>
           &nbsp;
           &nbsp;
           &nbsp;
-          <a href="#" class="color-muted">
+          <a href="#" class="color-white">
             <i class="fa fa-envelope-o"></i>
             Email
           </a>
