--- a/new_site/home.html
+++ b/new_site/home.html
@@ -36,7 +36,7 @@
           </div>
           <div class="separator15"></div>
           <a href="#" class="color-white">
-            <i class="fa fa-phone "></i>
+            <i class="fa fa-phone"></i>
             Telefono
           </a>
           &nbsp;
@@ -58,19 +58,19 @@
         <div class="line-compress top-menu line-max">
           <div class="separator5"></div>
           <div class="top-menu-social col4">
-            <a href="facebook.com" target="_blank">
+            <a href="https://www.facebook.com/accademiaartedesigncappiello" target="_blank">
               <i class="fa fa-facebook-official"></i>
             </a>
-            <a href="facebook.com" target="_blank">
+            <a href="http://twitter.com/Acc_Cappiello" target="_blank">
               <i class="fa fa-twitter"></i>
             </a>
-            <a href="facebook.com" target="_blank">
+            <a href="http://instagram.com/accademiacappiello" target="_blank">
               <i class="fa fa-instagram"></i>
             </a>
-            <a href="facebook.com" target="_blank">
+            <a href="http://www.flickr.com/photos/accademiacappiello/" target="_blank">
               <i class="fa fa-pinterest"></i>
             </a>
-            <a href="facebook.com" target="_blank">
+            <a href="http://vimeo.com/user5798268" target="_blank">
               <i class="fa fa-vimeo"></i>
             </a>
           </div>
@@ -92,7 +92,7 @@
                     &nbsp;
                     &nbsp;
                     <a href="#" class="color-white toggle-opacity-hover">
-                      <i class="fa fa-envelope color-white"></i>
+                      <i class="fa fa-at color-white"></i>
                       Email
                     </a>
                   </li>
